force-app/main/default/objects/Account/fields/LLC_BI__Interim_Statement__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interim_Statement__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify an end date of the most recent interim financial statement.</description>
    <label>Interim Statement</label>
    <type>Date</type>
</CustomField>