force-app/main/default/objects/Account/fields/LLC_BI__Is_Institution_Affiliated__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Institution_Affiliated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators or users manually select this optional checkbox to indicate affiliation with the financial institution. By default, this field is deselected.</description>
    <inlineHelpText>Select this checkbox to indicate affiliation with the financial institution.</inlineHelpText>
    <label>Is Institution Affiliated</label>
    <type>Checkbox</type>
</CustomField>