force-app/main/default/objects/Account/fields/LLC_BI__Is_Non_Customer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Non_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users populate this optional boolean field on the relationship when the added entity is a third party. By default, this field is false.</description>
    <inlineHelpText>Select this checkbox when the added entity is a third-party entity.</inlineHelpText>
    <label>Is Non-Customer</label>
    <type>Checkbox</type>
</CustomField>