force-app/main/default/objects/Account/fields/LLC_BI__Personal_Liquidity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Personal_Liquidity__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the owner&apos;s Personal and Business Liquidity as shown on most recent Personal Financial Statement.</description>
    <label>Pers. &amp; Bus. Liquidity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>