force-app/main/default/objects/Account/fields/LLC_BI__Pod__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pod__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the lending team associated with this Relationship or Account. The value provided must match one of the values in the POD list established for this organization.</description>
    <label>Pod</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dogwood</fullName>
            </value>
            <value>
                <fullName>Cypress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>