force-app/main/default/objects/Account/fields/LLC_BI__Previous_Financial_Account_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Previous_Financial_Account_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. If true, the holder of the account will certify that they have previously had a transaction account at a financial institution within the last 12 months.</description>
    <inlineHelpText>If true the holder of the account will certify that they have previously had a transaction account at a financial institution within the last 12 months.</inlineHelpText>
    <label>Previous Financial Account Indicator</label>
    <type>Checkbox</type>
</CustomField>