force-app/main/default/objects/Account/fields/LLC_BI__Reg_O_Relationship__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reg_O_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is manually populated by a user. When the value of the field is set to true, the sharing setting of this Relationship is affected to restrict read/write access. This field is used to indicate that the relationship is subject to Regulation O standards. If Checked, the relationship is regulation O.</description>
    <inlineHelpText>This field should be checked if Regulation O applies to this Relationship</inlineHelpText>
    <label>Reg O Relationship</label>
    <type>Checkbox</type>
</CustomField>