force-app/main/default/objects/Account/fields/LLC_BI__Risk_Grade_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated automatically. It stores the last selected risk grade template choice when creating a risk rating review. When creating risk rating reviews from the selection page, this field is used to automatically populate the risk grade template picklist.</description>
    <label>Risk Grade Template</label>
    <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>