force-app/main/default/objects/Account/fields/LLC_BI__Risk_Rating_Review_Grade__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Risk_Rating_Review_Grade__c</fullName>
    <description>This field is optional. It is automatically populated with the value of the latest approved related risk rating review. When the latest decisioned risk rating review is rejected, the value of this field remains unchanged.</description>
    <label>Risk Rating Review Grade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>