force-app/main/default/objects/Account/fields/LLC_BI__Statement_From_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Statement_From_Date__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used with Automated Financials System. It designates the beginning of the date range the BOT will request from the Relationship being serviced.</description>
    <inlineHelpText>The beginning of the date range in which the BOT will request from the relationship being serviced</inlineHelpText>
    <label>Statement From Date</label>
    <type>Date</type>
</CustomField>