force-app/main/default/objects/Account/fields/LLC_BI__Third_Party__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Third_Party__c</fullName>
    <description>Users populate this optional picklist on the relationship with the added entity&apos;s third party type, such as Attorney, Insurance Agency, Appraiser, Inspector, or Inactive. By default, this field is blank.</description>
    <inlineHelpText>Select the third party type of the added entity.</inlineHelpText>
    <label>Third Party Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Insurance Agency</fullName>
            </value>
            <value>
                <fullName>Appraiser</fullName>
            </value>
            <value>
                <fullName>Inspector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>