force-app/main/default/objects/Account/fields/LLC_BI__Total_Participation_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Participation_Amount__c</fullName>
    <description>This optional field automatically populates with the total participation amount for all syndications and participations involved with this relationship.</description>
    <label>Total Participation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>