force-app/main/default/objects/Account/fields/LLC_BI__UpsellOpportunity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__UpsellOpportunity__c</fullName>
    <description>This field is optional. It is populated by a user. This field is used to select Upsell Opportunity status for this Relationship or Account, for example, Yes, No, or Maybe. The value provided must match one of the values in the Upsell Opportunity list established for this organization.</description>
    <label>Upsell Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>