force-app/main/default/objects/Account/fields/LLC_BI__Valid_Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Valid_Resolution_Type__c</fullName>
    <description>Valid Resolution Type</description>
    <inlineHelpText>These are the options that indicate whether the financial institution possesses a valid and up-to-date resolution for the commercial account owner, or if a resolution needs to be included in the transaction workflow.</inlineHelpText>
    <label>Valid Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No resolution on file or updating- complete now</fullName>
            </value>
            <value>
                <fullName>Resolution on file- not needed</fullName>
            </value>
            <value>
                <fullName>No resolution on file or updating- print to complete later</fullName>
            </value>
            <value>
                <fullName>Customer providing- not needed</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>