force-app/main/default/objects/Account/fields/LLCLP__Primary_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>LLCLP__Primary_Expiration_Date__c</fullName>
    <label>Primary ID Expiration Date</label>
    <type>Date</type>
</CustomField>