force-app/main/default/objects/Account/fields/LLCLP__Primary_Id_Number__c.field-meta.xml
<CustomField>
    <fullName>LLCLP__Primary_Id_Number__c</fullName>
    <label>Primary ID Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>