force-app/main/default/objects/Account/fields/LLCLP__Primary_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>LLCLP__Primary_ID_Type__c</fullName>
    <label>Primary ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver&apos;s License</fullName>
            </value>
            <value>
                <fullName>State ID Card</fullName>
            </value>
            <value>
                <fullName>U.S Military ID Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>U.S. Visa</fullName>
            </value>
            <value>
                <fullName>Matricula Consular</fullName>
            </value>
            <value>
                <fullName>Alien Registration Receipt Card</fullName>
            </value>
            <value>
                <fullName>U.S. Permanent Resident Card</fullName>
            </value>
            <value>
                <fullName>U.S. Temporary Resident Card</fullName>
            </value>
            <value>
                <fullName>U.S. Employment Authorization Card</fullName>
            </value>
            <value>
                <fullName>Secretary of State</fullName>
            </value>
            <value>
                <fullName>Articles of Incorporation</fullName>
            </value>
            <value>
                <fullName>Partnership Agreement</fullName>
            </value>
            <value>
                <fullName>Certificate of Existence</fullName>
            </value>
            <value>
                <fullName>Certificate of Partnership</fullName>
            </value>
            <value>
                <fullName>Registration of Partnership</fullName>
            </value>
            <value>
                <fullName>Trust Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>