force-app/main/default/objects/Account/fields/LLCLP__Secondary_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>LLCLP__Secondary_ID_Number__c</fullName>
    <label>Secondary ID Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>