force-app/main/default/objects/Account/fields/LLCLP__Secondary_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>LLCLP__Secondary_ID_Type__c</fullName>
    <label>Secondary ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certificate of Naturalization</fullName>
            </value>
            <value>
                <fullName>Certificate of Citizenship</fullName>
            </value>
            <value>
                <fullName>Employer Identification Card</fullName>
            </value>
            <value>
                <fullName>Utility Bill</fullName>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
            </value>
            <value>
                <fullName>Student ID Card</fullName>
            </value>
            <value>
                <fullName>Firearm License</fullName>
            </value>
            <value>
                <fullName>Insurance Policy</fullName>
            </value>
            <value>
                <fullName>Social Security Card</fullName>
            </value>
            <value>
                <fullName>IRS TIN Letter</fullName>
            </value>
            <value>
                <fullName>Property Tax Bill</fullName>
            </value>
            <value>
                <fullName>Birth Certificate</fullName>
            </value>
            <value>
                <fullName>Medicaid/Medicare Card</fullName>
            </value>
            <value>
                <fullName>Voter Registration Card</fullName>
            </value>
            <value>
                <fullName>Marriage Certificate</fullName>
            </value>
            <value>
                <fullName>Professional License</fullName>
            </value>
            <value>
                <fullName>Vehicle Registration</fullName>
            </value>
            <value>
                <fullName>Debt Card</fullName>
            </value>
            <value>
                <fullName>Veterans Identification Card</fullName>
            </value>
            <value>
                <fullName>Secretary of State</fullName>
            </value>
            <value>
                <fullName>Articles of Incorporation</fullName>
            </value>
            <value>
                <fullName>Partnership Agreement</fullName>
            </value>
            <value>
                <fullName>Certificate of Existence</fullName>
            </value>
            <value>
                <fullName>Certificate of Partnership</fullName>
            </value>
            <value>
                <fullName>Registration of Partnership</fullName>
            </value>
            <value>
                <fullName>Trust Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>