force-app/main/default/objects/Account/fields/LoanReviewCommentsNarrative__c.field-meta.xml
<CustomField>
    <fullName>LoanReviewCommentsNarrative__c</fullName>
    <label>Loan Review Comments Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>