force-app/main/default/objects/Account/fields/Merchant_ID__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID__c</fullName>
    <description>Merchant ID for business accounts.</description>
    <label>Merchant ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>