force-app/main/default/objects/Account/fields/Merchant_Registration_Number_SURI_Numbe__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Registration_Number_SURI_Numbe__c</fullName>
    <inlineHelpText>This should match your Merchant Registration Certification Number that is provided by the Unified System of Internal Revenue (SURI) of the government of Puerto Rico.</inlineHelpText>
    <label>Merchant Registration Number-SURI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>