force-app/main/default/objects/Account/fields/NAICS__c.field-meta.xml
<CustomField>
    <fullName>NAICS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NAICS Object lookup</description>
    <label>NAICS</label>
    <referenceTo>NAICS__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>