force-app/main/default/objects/Account/fields/nBRIDGER__OFAC_AliasNames__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__OFAC_AliasNames__c</fullName>
    <description>Contains a list of alternative names for the OFAC search.  May include, DBA names or Alias.</description>
    <inlineHelpText>Enter Aliases, DBA Names, etc.  One per line.</inlineHelpText>
    <label>Alias or DBA Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>